--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,16 @@
 		"persistent": false,
 		"scripts": ["background.js"]
 	},
+	"content_scripts": [
+		{
+			"matches" : ["<all_urls>"],
+			"js": ["content.js"]
+		}
+	],
 	"browser_action": {
 		"default_icon": "camera.png",
 		"default_title": "Screenshot"
 	},
-	"permissions": ["<all_urls>"],
+	"permissions": ["tabs", "<all_urls>", "activeTab"],
 	"manifest_version": 2
 }
